--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ink-text-input": "^6.0.0",
     "kysely": "^0.28.5",
     "lucide-react": "^0.542.0",
+    "monaco-editor": "^0.52.2",
     "next": "15.5.2",
     "pg": "^8.16.3",
     "react": "19.1.0",
@@ -44,6 +45,7 @@
     "react-hook-form": "^7.62.0",
     "react-resizable-panels": "^3.0.5",
     "sonner": "^2.0.7",
+    "supports-color": "^10.2.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.5",
     "zustand": "^5.0.8"
