--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,12 @@ yarn-error.log*
 next-env.d.ts
 
 .vercel
+
+# package build directory
+/package/.next
+/package/https
+/package/node_modules
+/package/package-lock.json
+/package/pnpm-lock.yaml
+/package/cli.mjs
+/package/next.config.ts
