--- a/package/package.json
+++ b/package/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pg-viewer",
+  "name": "pg-viewer-cli",
   "version": "0.0.1",
   "description": "A PostgreSQL database viewer with a web interface you can run locally",
   "main": "cli.mjs",
