--- a/package/package.json
+++ b/package/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pg-viewer-cli",
-  "version": "0.0.1",
+  "version": "0.0.1-beta",
   "description": "A PostgreSQL database viewer with a web interface you can run locally",
   "main": "cli.mjs",
   "bin": "./cli.mjs",
