fix cli process directory and environtment

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "cli": "node cli.mjs",
+    "cli": "node ./package/cli.mjs",
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint",
@@ -12,8 +12,9 @@
     "package:clean": "if exist package\\.next rmdir /s /q package\\.next && if exist package\\https rmdir /s /q package\\https && if exist package\\cli.mjs del package\\cli.mjs && if exist package\\next.config.ts del package\\next.config.ts",
     "package:prepare": "if not exist package mkdir package",
     "package:copy": "copy cli.mjs package\\ && xcopy .next package\\.next\\ /e /i && copy next.config.ts package\\",
-    "package:build": "npm run build && npm run package:prepare && npm run package:copy",
-    "package:publish": "npm run package:build && cd package && npm publish"
+    "package:append-env": "scripts\\append-env",
+    "package:build": "npm run build && npm run package:prepare && npm run package:copy && npm run package:append-env",
+    "package:publish": "cd package && npm publish"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
