--- a/package/package.json
+++ b/package/package.json
@@ -1,10 +1,17 @@
 {
   "name": "pg-viewer-cli",
-  "version": "0.0.0-beta",
+  "version": "0.0.8-beta",
   "description": "A PostgreSQL database viewer with a web interface you can run locally",
   "main": "cli.mjs",
   "bin": "./cli.mjs",
-  "keywords": ["postgresql", "database", "viewer", "cli", "web", "interface"],
+  "keywords": [
+    "postgresql",
+    "database",
+    "viewer",
+    "cli",
+    "web",
+    "interface"
+  ],
   "author": "Elora",
   "license": "MIT",
   "homepage": "https://pg.aruu.me",
@@ -36,6 +43,7 @@
     "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "supports-color": "^10.2.0"
+    "supports-color": "^10.2.0",
+    "typescript": "^5"
   }
 }
